# tide-fs

./: Cargo.toml  README.md
examples/: compiled.rs  serve_dir.rs  serve_file.rs
examples/content/: index.html
examples/static/: index.html
src/: lib.rs  serve_dir.rs  serve_dir_compiled.rs  serve_file.rs
