[package]
name = "tide-fs"
version = "0.0.1"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "File system handlers for the Tide web-framework"
repository = "https://github.com/mendelt/tide-fs"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["tide", "http", "web", "routing"]
readme = "README.md"

[dependencies]
tide = { git = "https://github.com/mendelt/tide", branch = "remove_serve_file_dir" }
log = "0.4"
async-std = "1.9"

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
tempfile = "3.2.0"
surf = "2.1.0"
